<resources>
    <string name="app_name">PillGuard</string>
    <string name="app_logo">PillGuard Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="full_name">Full Name</string>
    <string name="role">Role</string>
    <string name="welcome_message">Welcome, %1$s!</string>
    <string name="view_schedule">View Schedule</string>
    <string name="unlock_box">Unlock Box</string>
    <string name="upcoming_medications">Upcoming Medications</string>
    <string name="medication_schedule">Medication Schedule</string>
    <string name="unlock_pillbox">Unlock Pillbox</string>
    <string name="enter_password">Enter Password</string>
    <string name="unlock">Unlock</string>
    <string name="unlock_request_sent">Unlock request sent</string>
    <string name="fields_empty">Please fill all fields</string>
    <string name="patient">Patient</string>
    <string name="caregiver">Caregiver</string>
    <string name="admin">Admin</string>
    <string name="password_reset_message">Password reset instructions sent to your email</string>
    <string name="admin_info">Add new user (Admin only)</string>
    <string name="user_added">User successfully added</string>

    <string-array name="user_types">
        <item>All</item>
        <item>Patients</item>
        <item>Nurses</item>
    </string-array>
    <string-array name="sort_options">
        <item>Alphabetical (A-Z)</item>
        <item>Alphabetical (Z-A)</item>
        <item>Chronological</item>
    </string-array>
</resources>